--- a/bloggnotifiering-kompetens.html
+++ b/bloggnotifiering-kompetens.html
@@ -26,7 +26,7 @@
             table[class=body] td,
             table[class=body] span,
             table[class=body] a {
-        font-size: 16px !important;
+        font-size: 14px !important;
       }
       table[class=body] .wrapper,
             table[class=body] .article {
@@ -61,6 +61,9 @@
         PRESERVE THESE STYLES IN THE HEAD
     ------------------------------------- */
     @media all {
+      p{
+        color:#33414e;
+      }
       .ExternalClass {
         width: 100%;
       }
@@ -71,6 +74,7 @@
             .ExternalClass td,
             .ExternalClass div {
         line-height: 100%;
+        color:#33414e;
       }
       .apple-link a {
         color: inherit !important;
@@ -99,7 +103,7 @@
     </style>
   </head>
   <body class="" style="background-color: #FAF9F7; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
-    <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">This is preheader text. Some clients will show this text as a preview.</span>
+    <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">XXXXXXXXXXXFörfattare, titelXXXXXXXXXX</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background-color: #FAF9F7;">
       <tr>
         <td class="container" style="font-family: sans-serif; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; max-width: 580px; padding: 10px; width: 580px;">
@@ -114,8 +118,7 @@
                     <tr>
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 0px; color:#ffffff;">BLOGG</p>
-                        <h1 style="font-family: sans-serif; font-size: 32px; font-weight: bold; margin: 0; Margin-bottom: 2px; color:#ffffff;">Fokus på skatterna</h1>
-                        <p style="font-family: sans-serif; font-size: 18px; font-weight: normal; margin: 0; Margin-bottom: 18px; color:#ffffff;">Svenskt Näringslivs experter om aktuella skattefrågor</p>
+                        <h1 style="font-family: sans-serif; font-size: 32px; font-weight: bold; margin: 0; Margin-bottom: 2px; color:#ffffff;">Kompetensförsörjning</h1>
                       </td>
                     </tr>
                   </table>
@@ -144,14 +147,14 @@
             
             <!-- START FOOTER -->
             <div class="footer" style="clear: both; Margin-top: 10px; text-align: center; width: 100%;">
-              <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; padding: 20px;">
+              <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; padding-left: 20px; padding-right:20px; padding-top:0px;">
                 <tr>
                   <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
                     <a href="##OptOutList##" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Klicka här</a> för att avsluta prenumerationen på dessa notifieringar.
                   </td>
                 </tr>
                 <tr>
-                  <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
+                  <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
                     Svenskt Näringsliv, 114 82 Stockholm.
                   </td>
                 </tr>
